WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192600
Globally namespaced objects shouldn't use framework-prefixed names
https://bugs.webkit.org/show_bug.cgi?id=192600
Summary
Globally namespaced objects shouldn't use framework-prefixed names
Jer Noble
Reported
2018-12-11 12:10:16 PST
Globally namespaced objects shouldn't use framework-prefixed names
Attachments
Patch
(2.66 KB, patch)
2018-12-11 12:12 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-12-11 12:12:23 PST
<
rdar://problem/46637086
>
Jer Noble
Comment 2
2018-12-11 12:12:25 PST
Created
attachment 357068
[details]
Patch
Radar WebKit Bug Importer
Comment 3
2018-12-11 12:12:25 PST
<
rdar://problem/46637087
>
WebKit Commit Bot
Comment 4
2018-12-11 16:18:21 PST
Comment on
attachment 357068
[details]
Patch Clearing flags on attachment: 357068 Committed
r239091
: <
https://trac.webkit.org/changeset/239091
>
WebKit Commit Bot
Comment 5
2018-12-11 16:18:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug