Globally namespaced objects shouldn't use framework-prefixed names https://bugs.webkit.org/show_bug.cgi?id=192600

Reviewed by Eric Carlson.

Rename CMSampleBufferIs... -> isCMSampleBuffer...

* platform/graphics/avfoundation/objc/MediaSampleAVFObjC.mm:
(WebCore::isCMSampleBufferRandomAccess):
(WebCore::isCMSampleBufferNonDisplaying):
(WebCore::MediaSampleAVFObjC::flags const):
(WebCore::CMSampleBufferIsRandomAccess): Deleted.
(WebCore::CMSampleBufferIsNonDisplaying): Deleted.


Canonical link: https://commits.webkit.org/207181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239091 268f45cc-cd09-0410-ab3c-d52691b4dbfc